_includes/css/layout.css
/*
* Skeleton V1.1
* Copyright 2011, Dave Gamache
* www.getskeleton.com
* Free to use under the MIT license.
* http://www.opensource.org/licenses/mit-license.php
* 8/17/2011
*/

/* Big Tablet Portrait size to Tablet Landscape (devices and browsers) */
@media only screen and (min-width: 959px) and (max-width: 1160px) {
        .topbar {
		padding-left: 30%;
		padding-right: 5%;
	}
        .topbar ul li {
		margin-left: 30px;
	}
}

/* Smaller than standard 960 (devices and browsers) */
@media only screen and (max-width: 959px) {
	#logo {
		font-size: 21px;
		margin-bottom: 15px; }
	nav .button {
		padding: 9px 20px 11px; }
}

/* Tablet Portrait size to standard 960 (devices and browsers) */
@media only screen and (min-width: 768px) and (max-width: 959px) {
        .topbar {
		padding-left: 2%;
		padding-right: 5%;
	}
        .topbar ul li {
		margin-left: 25px;
	}
	.sidebar {
		display: none;
	}

        h1.backdrop {
		line-height: 285px;
        }

	.content {
		border: 0px;
		padding-left: 0px;
	}
}

/* All Mobile Sizes (devices and browser) */
@media only screen and (max-width: 767px) {
	header h1 { font-size: 34px; line-height: 37px; }
        .topbar {
		padding-left: 18%;
		padding-right: 21%;
	}
        .topbar ul li {
		margin-left: 20px;
	}
        .topbar ul li.hide {
		display: none;
	}
	.sidebar {
		display: none;
	}
	.content {
		border: 0px;
		padding-left: 0px;
	}
	.thumbnail-article {
		display: none;
	}
	.thumbnail-image {
		display: none;
	}
	.thumbnail-video {
		display: none;
	}
	.thumbnail-container {
		height: 100%;
	}
	.thumbnail-icon {
		margin-top: 2%;
		margin-left: 0%;
	}
	.thumbnail-description {
		margin-left: 0%;
	}
	.thumbnail-description h3 {
		font-size: 20px;
		padding-top: 1%;
		padding-left: 16%;
	}
	.thumbnail-description p {
		font-size: 100%;
		margin-top: -3%;
	}
	.thumbnail-separator {
		margin: 10px auto 30px auto;
	}
        h1.backdrop {
		line-height: 168px;
        }
	span.hide {
		display: none;
	}
}

/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
@media only screen and (min-width: 480px) and (max-width: 767px) {
	.topbar {
		padding-left: 0%;
		padding-right: 3%;
	}
	.topbar ul li {
                font-size: 105%;
                margin-left: 20px;
	}
	.sidebar {
		display: none;
	}

	h1 {
		font-size: 28px;
		line-height: 36px;
	}

        h1.backdrop {
		line-height: 218px;
        }
}

/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
@media only screen and (max-width: 479px) {
	.topbar {
		padding-left: 0%;
		padding-right: 2%;
	}
	.topbar ul li {
                font-size: 105%;
                margin-left: 10px;
	}
	.sidebar {
		display: none;
	}

	h1 {
		font-size: 24px;
		line-height: 32px;
	}

	h2 {
		font-size: 22px;
		line-height: 24px;
	}

	span.inline-info {
		display: block;
	}
}

